Create logic for deffering the loading of trips
